force-app/main/default/objects/LiveAgentSession/fields/CC_Franja_Horaria_Aux__c.field-meta.xml
<CustomField>
    <fullName>CC_Franja_Horaria_Aux__c</fullName>
    <formula>HOUR(TIMEVALUE(LoginTime + CC_GMT_Offset__c /24 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Franja Horaria Aux</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>