force-app/main/default/objects/LiveAgentSession/fields/CC_Login_GMT__c.field-meta.xml
<CustomField>
    <fullName>CC_Login_GMT__c</fullName>
    <formula>IF (DATEVALUE(LoginTime) &gt;= DATE( YEAR (DATEVALUE(LoginTime)),03,31) - MOD(DATE ( YEAR (DATEVALUE(LoginTime)),03,31) - DATE (1900,1,7),7)
&amp;&amp; DATEVALUE(LoginTime) &lt; DATE( YEAR (DATEVALUE(LoginTime)),10,31) - MOD(DATE ( YEAR (DATEVALUE(LoginTime)),10,31) - DATE (1900,1,7),7),
LoginTime  + (2/24),
LoginTime  + (1/24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login GMT</label>
    <type>DateTime</type>
</CustomField>